Add CombinedWeatherInfoTaskScope custom policy