@@ -23,5 +23,6 @@ java -cp target/classes eu.happycoders.demo.ExecutorServiceDemo
 java -cp target/classes --enable-preview eu.happycoders.demo.StructuredConcurrencyDemo
 java -cp target/classes --enable-preview eu.happycoders.demo.ShutdownOnFailureDemo
 java -cp target/classes --enable-preview eu.happycoders.demo.ShutdownOnSuccessDemo
+java -cp target/classes --enable-preview eu.happycoders.demo.CombinedWeatherInfoDemo
 java -cp target/classes --enable-preview eu.happycoders.demo.StructuredConcurrencyWithScopedValueDemo
 ```
